# Cinemind

./: .gitignore  01-APIKey使用.py  README.md  project_rules.md  pyproject.toml  walkthrough.md  walkthrough_优化规则_20260319.md
.agent/rules/: language.md  project_rules.md
.agent/workflows/: rag_health_check.md
.rules/: 00-language-rules.md  01-base-standards.md  01-工作流与语言规范.md  02-python-best-practices.md  02-编码标准与最佳实践.md  03-operation-logging.md  03-架构设计与需求分析.md  04-planning-documentation-sync.md  04-框架特有规范.md
.skills/: document_master.md  operation_logger.md
.skills/agentic_task_management/: SKILL_zh.md
.skills/algorithmic-art/: SKILL_zh.md
.skills/brand-guidelines/: SKILL_zh.md
.skills/canvas-design/: SKILL_zh.md
.skills/claude-api/: SKILL_zh.md
.skills/doc-coauthoring/: SKILL_zh.md
.skills/docx/: SKILL_zh.md
.skills/frontend-design/: SKILL_zh.md
.skills/general_programming_excellence/: SKILL.md
.skills/internal-comms/: SKILL_zh.md
.skills/pdf/: SKILL_zh.md
document/: 20260322_RAG项目实战_implementation_plan.md  20260322_RAG项目实战_task.md  任务清单.md  实施方案.md
src/: 01-APIKey使用.py  03-提示词优化案例_金融文本分类.py
src/03-RAG项目实战/: .env.example  .gitignore  README.md  app.py  pyproject.toml
src/03-RAG项目实战/.streamlit/: secrets.toml
src/03-RAG项目实战/config/: settings.py
src/03-RAG项目实战/core/: history_manager.py  rag_chain.py  vector_store.py
src/03-RAG项目实战/data/source_docs/: 尺码推荐.txt
src/03-RAG项目实战/docs/qa/: 01-RAG引擎实现与Streamlit资源集成全量问答实录.md
src/03-RAG项目实战/pages/: 1_📚_知识库录入平台.py
src/03-RAG项目实战/services/: kb_service.py
src/03-RAG项目实战/utils/: logger.py
(+80 files in other folders)
