[project]
name = "cinemind"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "dashscope>=1.25.14",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.19",
    "langchain-openai>=1.1.11",
    "openai>=2.28.0",
    "scikit-learn>=1.8.0",
    "uv>=0.10.11",
]
