[project]
name = "cinemind-rag"
version = "0.1.0"
description = "Cinemind Enterprise RAG Project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-community>=0.0.10",
    "streamlit>=1.30.0",
    "langchain-chroma>=0.1.0",
    "python-dotenv>=1.0.0",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
